# stylegan2-pytorch-1

./: .envrc  .gitignore  apply_factor.py  closed_form_factorization.py  custom_transforms.py  factor_130000.pt  generate.py  prepare_data.py  projector.py  pyproject.toml  train.py
.direnv/python-3.8.6/: pyvenv.cfg
