[tool.poetry]
name = "stylegan"
version = "0.1.0"
description = ""
authors = ["johnny riskas <johnnyriskas@overjet.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.59.0"
scikit-image = "^0.18.1"
ipython = "^7.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
